--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,13 @@
+* {
+  font-family: 'Montserrat', sans-serif;
+}
+
 body {
-    background-color: #FAFAFA;
+  background-color: #FAFAFA;
+  font-family: 'Montserrat', sans-serif;
+}
+
+/* Garantir que todos os elementos usem Montserrat */
+h1, h2, h3, h4, h5, h6, p, span, div, button, input, textarea, select {
+  font-family: 'Montserrat', sans-serif;
 }
